--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -129,6 +129,14 @@ jcc_avatar_logo.png: jcc_avatar_logo-b061a6ee2ea889ec3005c70d72bfe7ac.png
 jcc_avatar_logo/index.png: jcc_avatar_logo-b061a6ee2ea889ec3005c70d72bfe7ac.png
 layout2/background_pattern.png: layout2/background_pattern-6b45c1b38ff36d8b5193a06f45dec089.png
 layout2/background_pattern/index.png: layout2/background_pattern-6b45c1b38ff36d8b5193a06f45dec089.png
+layout2/theme-a/background_pattern.png: layout2/theme-a/background_pattern-6b45c1b38ff36d8b5193a06f45dec089.png
+layout2/theme-a/background_pattern/index.png: layout2/theme-a/background_pattern-6b45c1b38ff36d8b5193a06f45dec089.png
+layout2/theme-b/background_pattern.png: layout2/theme-b/background_pattern-a47f84c9617713621b46c9989cc3d53d.png
+layout2/theme-b/background_pattern/index.png: layout2/theme-b/background_pattern-a47f84c9617713621b46c9989cc3d53d.png
+layout2/theme-c/Screen-Shot-2013-12-26-at-10.07.00-AM_modified.png: layout2/theme-c/Screen-Shot-2013-12-26-at-10.07.00-AM_modified-ad961435baffd1149d8c14b8fb82face.png
+layout2/theme-c/Screen-Shot-2013-12-26-at-10/index.07.00-AM_modified.png: layout2/theme-c/Screen-Shot-2013-12-26-at-10.07.00-AM_modified-ad961435baffd1149d8c14b8fb82face.png
+layout2/theme-c/background_pattern.png: layout2/theme-c/background_pattern-c29cc9cf6c0f077fd829a74d00383fca.png
+layout2/theme-c/background_pattern/index.png: layout2/theme-c/background_pattern-c29cc9cf6c0f077fd829a74d00383fca.png
 less-logo-large.png: less-logo-large-8c495282eec8fd8526b1f763cb4244b8.png
 less-logo-large/index.png: less-logo-large-8c495282eec8fd8526b1f763cb4244b8.png
 logo.png: logo-2d3409d14e64b353c80d63907f3026b1.png
@@ -165,8 +173,8 @@ active_admin.js: active_admin-50ddc6a6eb423bdedd63b5ac2bcc15b3.js
 active_admin/index.js: active_admin-50ddc6a6eb423bdedd63b5ac2bcc15b3.js
 application.js: application-6a8d072cf16c50f29166acec44927acd.js
 application/index.js: application-6a8d072cf16c50f29166acec44927acd.js
-clients.js: clients-caa13e57d560f7930868acb1ddf7aeb8.js
-clients/index.js: clients-caa13e57d560f7930868acb1ddf7aeb8.js
+clients.js: clients-cfe82e2815037383bc3c57ec5300cdf0.js
+clients/index.js: clients-cfe82e2815037383bc3c57ec5300cdf0.js
 flexslider/demo/basic-carousel.html: flexslider/demo/basic-carousel-2801356566406ba550898fb68f216a34.html
 flexslider/demo/basic-carousel/index.html: flexslider/demo/basic-carousel-2801356566406ba550898fb68f216a34.html
 flexslider/demo/carousel-min-max.html: flexslider/demo/carousel-min-max-5ff579e5d3f8bc42044c6ab71cfa7ad8.html
@@ -315,22 +323,22 @@ libs/plugins/msgbox/images/question.png: libs/plugins/msgbox/images/question-acc
 libs/plugins/msgbox/images/question/index.png: libs/plugins/msgbox/images/question-acc0802e79987edcecaf6a5387a29754.png
 moment.js: moment-399bb4d0603636a762588f850980a7e6.js
 moment/index.js: moment-399bb4d0603636a762588f850980a7e6.js
-petitions.js: petitions-543c4ec608853074ea4f4a05765ad245.js
-petitions/index.js: petitions-543c4ec608853074ea4f4a05765ad245.js
-phonecampaigns.js: phonecampaigns-8b05173f950a68c295d1ee35af4a3061.js
-phonecampaigns/index.js: phonecampaigns-8b05173f950a68c295d1ee35af4a3061.js
-polls.js: polls-baea094462cae20ce330622fd216c1aa.js
-polls/index.js: polls-baea094462cae20ce330622fd216c1aa.js
+petitions.js: petitions-46829b94626fead52c0a87c253c767a3.js
+petitions/index.js: petitions-46829b94626fead52c0a87c253c767a3.js
+phonecampaigns.js: phonecampaigns-952e6ca0d6b7e30a0e99c636000338c3.js
+phonecampaigns/index.js: phonecampaigns-952e6ca0d6b7e30a0e99c636000338c3.js
+polls.js: polls-538868bd2a76e292cb930719ff769ee2.js
+polls/index.js: polls-538868bd2a76e292cb930719ff769ee2.js
 ui-bootstrap-0.3.0.js: ui-bootstrap-0.3.0-f0e9bce0347382bc6dd5e18b5d8897a9.js
 ui-bootstrap-0/index.3.0.js: ui-bootstrap-0.3.0-f0e9bce0347382bc6dd5e18b5d8897a9.js
-widgets.js: widgets-c431597a4824029941a3172f19e50545.js
-widgets/index.js: widgets-c431597a4824029941a3172f19e50545.js
+widgets.js: widgets-fb8456d377051b7aa827c14f6c0888c5.js
+widgets/index.js: widgets-fb8456d377051b7aa827c14f6c0888c5.js
 active_admin.css: active_admin-76c2bf5bf0a1115836ca05941229bbb6.css
 active_admin/index.css: active_admin-76c2bf5bf0a1115836ca05941229bbb6.css
 application.css: application-9b7c521514e4c085149fe4abdb798389.css
 application/index.css: application-9b7c521514e4c085149fe4abdb798389.css
-clients.css: clients-04219d7ddf1a4197219690d07a9a0a30.css
-clients/index.css: clients-04219d7ddf1a4197219690d07a9a0a30.css
+clients.css: clients-cca967f18c23cdd24e7c38c1ff628700.css
+clients/index.css: clients-cca967f18c23cdd24e7c38c1ff628700.css
 dashboard/application.css: dashboard/application-5810014ed6335031d5ce1eb7640eb765.css
 dashboard/application/index.css: dashboard/application-5810014ed6335031d5ce1eb7640eb765.css
 font/FontAwesome.otf: font/FontAwesome-4a334c842571e9552187a64b958aef1a.otf
@@ -391,20 +399,20 @@ font/proximanova-webfont.eot: font/proximanova-webfont-6cc4b5925923d6393221c2235
 font/proximanova-webfont/index.eot: font/proximanova-webfont-6cc4b5925923d6393221c22354c734fc.eot
 font/proximanova-webfont.ttf: font/proximanova-webfont-f82aaad92997c33f1ef4c44649d830a5.ttf
 font/proximanova-webfont/index.ttf: font/proximanova-webfont-f82aaad92997c33f1ef4c44649d830a5.ttf
-layouts/layout1.css: layouts/layout1-49cb5ee1a113d8b3f0af3d093243c0bb.css
-layouts/layout1/index.css: layouts/layout1-49cb5ee1a113d8b3f0af3d093243c0bb.css
-layouts/layout2-responsive.css: layouts/layout2-responsive-3b2bba099565926a3535c197adbb0f22.css
-layouts/layout2-responsive/index.css: layouts/layout2-responsive-3b2bba099565926a3535c197adbb0f22.css
-layouts/layout2.css: layouts/layout2-c5e0a6c25d1b1bbf64dc3747271146a4.css
-layouts/layout2/index.css: layouts/layout2-c5e0a6c25d1b1bbf64dc3747271146a4.css
+layouts/layout1.css: layouts/layout1-7d9a6b62fff20e2adee748215b58e89d.css
+layouts/layout1/index.css: layouts/layout1-7d9a6b62fff20e2adee748215b58e89d.css
+layouts/layout2-responsive.css: layouts/layout2-responsive-c89ecca88e62349837c0689ad0f1b59b.css
+layouts/layout2-responsive/index.css: layouts/layout2-responsive-c89ecca88e62349837c0689ad0f1b59b.css
+layouts/layout2.css: layouts/layout2-e86da4c9ef9bdaffbbd3edcd0e4573cf.css
+layouts/layout2/index.css: layouts/layout2-e86da4c9ef9bdaffbbd3edcd0e4573cf.css
 petitions.css: petitions-be6c3446875e6407deee2ea4f38615d8.css
 petitions/index.css: petitions-be6c3446875e6407deee2ea4f38615d8.css
 polls.css: polls-9a3e85b316d4a9047bbc5f81c27a8d64.css
 polls/index.css: polls-9a3e85b316d4a9047bbc5f81c27a8d64.css
-themes/layout1_standard.css: themes/layout1_standard-1b13569e9620782f423d4cd3ce931750.css
-themes/layout1_standard/index.css: themes/layout1_standard-1b13569e9620782f423d4cd3ce931750.css
-themes/layout2_standard.css: themes/layout2_standard-2a3e451dbef0200b7353d17fe9a7d15a.css
-themes/layout2_standard/index.css: themes/layout2_standard-2a3e451dbef0200b7353d17fe9a7d15a.css
+themes/layout1_standard.css: themes/layout1_standard-ed2057742c9289b35e71c56d08accbdf.css
+themes/layout1_standard/index.css: themes/layout1_standard-ed2057742c9289b35e71c56d08accbdf.css
+themes/layout2_standard.css: themes/layout2_standard-28e9a97f8b7b5c2ba7d05c2d602ddf77.css
+themes/layout2_standard/index.css: themes/layout2_standard-28e9a97f8b7b5c2ba7d05c2d602ddf77.css
 ui-lightness/images/animated-overlay.gif: ui-lightness/images/animated-overlay-602eee4c79a4796b02bb6442948c9e28.gif
 ui-lightness/images/animated-overlay/index.gif: ui-lightness/images/animated-overlay-602eee4c79a4796b02bb6442948c9e28.gif
 ui-lightness/images/ui-bg_diagonals-thick_18_b81900_40x40.png: ui-lightness/images/ui-bg_diagonals-thick_18_b81900_40x40-589c8344c29b6960953f9671527cf28d.png
